C2 compilation failed with assert(!q->is_MergeMem())

XMLWordPrintable

    • b07
    • 13
    • b19
    • Fix failed

      Tests:
      applications/microbenchmarks/other/Test.java#id191

      [jmh] # Warmup Iteration 1: # To suppress the following error report, specify this argument
      [jmh] # after -XX: or in .hotspotrc: SuppressErrorAt=/parse1.cpp:1833
      [jmh] #
      [jmh] # A fatal error has been detected by the Java Runtime Environment:
      [jmh] #
      [jmh] # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1205/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3da5d9c-38fb-444d-8ac9-4f22eec2424c/runs/863429cc-ec37-40e1-bfc3-8eafb89c75b2/workspace/open/src/hotspot/share/opto/parse1.cpp:1833), pid=27233, tid=27249
      [jmh] # Error: assert(!q->is_MergeMem()) failed
      [jmh] #
      [jmh] # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.667)
      [jmh] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.667, mixed mode, sharing, compressed oops, g1 gc, linux-amd64)
      [jmh] # Problematic frame:
      [jmh] # V [libjvm.so+0x13a61d4] Parse::merge_memory_edges(MergeMemNode*, int, bool)+0x524

      Current CompileTask:
      C2: 136682 6838 ! jdk.nashorn.internal.scripts.Script$Recompilation$453$19715AAAAA$\^eval\_::L:50#FindMaxSeparation (1268 bytes)

      Stack: [0x00007fc080655000,0x00007fc080756000], sp=0x00007fc08074f680, free space=1001k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13a61d4] Parse::merge_memory_edges(MergeMemNode*, int, bool)+0x524
      V [libjvm.so+0x13a67ee] Parse::merge_common(Parse::Block*, int)+0x2fe
      V [libjvm.so+0x13b2177] Parse::do_if(BoolTest::mask, Node*)+0x557
      V [libjvm.so+0x13b8c8d] Parse::do_one_bytecode()+0x298d
      V [libjvm.so+0x13a7ca0] Parse::do_one_block()+0x650
      V [libjvm.so+0x13a81a3] Parse::do_all_blocks()+0x113
      V [libjvm.so+0x13aa064] Parse::Parse(JVMState*, ciMethod*, float)+0xc54
      V [libjvm.so+0x7d6e5c] ParseGenerator::generate(JVMState*)+0x18c
      V [libjvm.so+0xb4db99] Parse::do_call()+0x559
      V [libjvm.so+0x13b72f0] Parse::do_one_bytecode()+0xff0
      V [libjvm.so+0x13a7ca0] Parse::do_one_block()+0x650
      V [libjvm.so+0x13a81a3] Parse::do_all_blocks()+0x113
      V [libjvm.so+0x13aa064] Parse::Parse(JVMState*, ciMethod*, float)+0xc54
      V [libjvm.so+0x7d6e5c] ParseGenerator::generate(JVMState*)+0x18c
      V [libjvm.so+0xb4db99] Parse::do_call()+0x559
      V [libjvm.so+0x13b72f0] Parse::do_one_bytecode()+0xff0
      V [libjvm.so+0x13a7ca0] Parse::do_one_block()+0x650
      V [libjvm.so+0x13a81a3] Parse::do_all_blocks()+0x113
      V [libjvm.so+0x13aa064] Parse::Parse(JVMState*, ciMethod*, float)+0xc54
      V [libjvm.so+0x7d6e5c] ParseGenerator::generate(JVMState*)+0x18c
      V [libjvm.so+0xb4db99] Parse::do_call()+0x559
      V [libjvm.so+0x13b72f0] Parse::do_one_bytecode()+0xff0
      V [libjvm.so+0x13a7ca0] Parse::do_one_block()+0x650
      V [libjvm.so+0x13a81a3] Parse::do_all_blocks()+0x113
      V [libjvm.so+0x13aa064] Parse::Parse(JVMState*, ciMethod*, float)+0xc54
      V [libjvm.so+0x7d6e5c] ParseGenerator::generate(JVMState*)+0x18c
      V [libjvm.so+0xb4db99] Parse::do_call()+0x559
      V [libjvm.so+0x13b72f0] Parse::do_one_bytecode()+0xff0
      V [libjvm.so+0x13a7ca0] Parse::do_one_block()+0x650
      V [libjvm.so+0x13a81a3] Parse::do_all_blocks()+0x113
      V [libjvm.so+0x13aa064] Parse::Parse(JVMState*, ciMethod*, float)+0xc54
      V [libjvm.so+0x7d6e5c] ParseGenerator::generate(JVMState*)+0x18c
      V [libjvm.so+0x7de9f5] LateInlineCallGenerator::do_late_inline()+0xfb5
      V [libjvm.so+0x98ec0a] Compile::inline_incrementally_one()+0x14a
      V [libjvm.so+0x9952d7] Compile::inline_incrementally(PhaseIterGVN&)+0x187
      V [libjvm.so+0x99807b] Compile::Optimize()+0x2fb
      V [libjvm.so+0x999e3a] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x103a
      V [libjvm.so+0x7d4f5d] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
      V [libjvm.so+0x9a678e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x43e
      V [libjvm.so+0x9a7688] CompileBroker::compiler_thread_loop()+0x378
      V [libjvm.so+0x1630faa] JavaThread::thread_main_inner()+0x26a
      V [libjvm.so+0x1639358] JavaThread::run()+0x218
      V [libjvm.so+0x1636596] Thread::call_run()+0xf6
      V [libjvm.so+0x135716d] thread_native_entry(Thread*)+0x10d

            Assignee:
            Tobias Hartmann
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: