8221592: C2 compilation failed with assert(!q->is_MergeMem())

Transform the original MergeMem after transforming the slices to get rid of MergeMem inputs.

Reviewed-by: kvn, neliasso